feat(dashboard): implement team, cashiers, self-service kso, invitations flow and supabase rls
